# Utily

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FileUtil.h  StringUtil.h  main.cpp
